apps/cluster-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-dashboard
  namespace: cluster-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - health.alphonzojonesjr.com
    secretName: health-alphonzojonesjr-com-tls
  rules:
  - host: health.alphonzojonesjr.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cluster-dashboard
            port:
              number: 80
